--- a/style.css
+++ b/style.css
@@ -1,1 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
+h1{
+    text-align: center;
+    font-family:Abril Fatface;
+}
+
+nav{
+    text-align: center;
+    border:  solid #eee;
+    border-width: 2px 0px 2px 0px;
+}
+
+li{
+    list-style: none;
+    display:inline-block;
+    padding: 0px 5px 0px 5px;
+}
+
+a{
+    color:#777;
+}
+
+main{
+    width: 700px;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: #ddd;
+    display: block;
+    margin:auto;
+    
+}
+
+h5{
+    color:#dd3232
+}
+
+img{
+    display: inline-block;
+    margin: auto
+}
+
+P{
+    justify-content:space-around;
+    margin-top: 0px;
+}
+
